[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
description = "cargo test minigrep crate"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = 0

[dependencies]
